--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ editdistance-s==1.0.0
 filelock==3.3.1
 identify==2.3.0
 nodeenv==1.6.0
+numpy==1.21.2
+Pillow==8.4.0
 pip==21.2.4
 platformdirs==2.4.0
 pre-commit==2.15.0
@@ -16,6 +18,10 @@ PyYAML==6.0
 setuptools==58.0.4
 six==1.16.0
 toml==0.10.2
+torch==1.9.1+cu111
+torchaudio==0.9.1
+torchvision==0.10.1+cu111
+typing-extensions==3.10.0.2
 virtualenv==20.8.1
 wheel==0.37.0
 wincertstore==0.2
