--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,76 @@
+absl-py==0.15.0
 appdirs==1.4.4
 backports.entry-points-selectable==1.1.0
+cachetools==4.2.4
 certifi==2021.10.8
 cffi==1.14.6
 cfgv==3.3.1
+charset-normalizer==2.0.7
+click==8.0.3
+colorama==0.4.4
+configparser==5.0.2
+cycler==0.10.0
+Cython==0.29.24
 distlib==0.3.3
+docker-pycreds==0.4.0
 editdistance-s==1.0.0
 filelock==3.3.1
+gitdb==4.0.7
+GitPython==3.1.24
+google-auth==2.3.0
+google-auth-oauthlib==0.4.6
+grpcio==1.41.0
 identify==2.3.0
+idna==3.3
+kiwisolver==1.3.2
+Markdown==3.3.4
+matplotlib==3.4.3
 nodeenv==1.6.0
 numpy==1.21.2
+oauthlib==3.1.1
+opencv-python==4.5.3.56
+pandas==1.3.4
+pathtools==0.1.2
 Pillow==8.4.0
 pip==21.2.4
 platformdirs==2.4.0
 pre-commit==2.15.0
+promise==2.3
+protobuf==3.18.1
+psutil==5.8.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycparser==2.20
+pyparsing==2.4.7
+python-dateutil==2.8.2
+pytz==2021.3
 PyYAML==6.0
+requests==2.26.0
+requests-oauthlib==1.3.0
+rsa==4.7.2
+scipy==1.7.1
+seaborn==0.11.2
+sentry-sdk==1.4.3
 setuptools==58.0.4
+shortuuid==1.0.1
 six==1.16.0
+smmap==4.0.0
+subprocess32==3.5.4
+tensorboard==2.7.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.0
+termcolor==1.1.0
+thop==0.0.31.post2005241907
 toml==0.10.2
 torch==1.9.1+cu111
 torchaudio==0.9.1
 torchvision==0.10.1+cu111
+tqdm==4.62.3
 typing-extensions==3.10.0.2
+urllib3==1.26.7
 virtualenv==20.8.1
+wandb==0.12.5
+Werkzeug==2.0.2
 wheel==0.37.0
 wincertstore==0.2
+yaspin==2.1.0
