--- a/environment.yml
+++ b/environment.yml
@@ -85,6 +85,7 @@ dependencies:
     - termcolor==1.1.0
     - thop==0.0.31-2005241907
     - torch==1.9.1+cu111
+    - torch-tb-profiler==0.3.0
     - torchaudio==0.9.1
     - torchvision==0.10.1+cu111
     - tqdm==4.62.3
