--- a/requirements.txt
+++ b/requirements.txt
@@ -63,6 +63,7 @@ termcolor==1.1.0
 thop==0.0.31.post2005241907
 toml==0.10.2
 torch==1.9.1+cu111
+torch-tb-profiler==0.3.0
 torchaudio==0.9.1
 torchvision==0.10.1+cu111
 tqdm==4.62.3
