--- a/environment.yml
+++ b/environment.yml
@@ -67,6 +67,7 @@ dependencies:
     - psutil==5.8.0
     - pyasn1==0.4.8
     - pyasn1-modules==0.2.8
+    - pycocotools==2.0
     - pyparsing==2.4.7
     - python-dateutil==2.8.2
     - pytz==2021.3
