--- a/requirements.txt
+++ b/requirements.txt
@@ -40,6 +40,7 @@ protobuf==3.18.1
 psutil==5.8.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pycocotools==2.0
 pycparser==2.20
 pyparsing==2.4.7
 python-dateutil==2.8.2
