--- a/.gitignore
+++ b/.gitignore
@@ -139,6 +139,7 @@ cython_debug/
 
 # Custom
 src/models/coco
+src/models/data
 src/models/yolor/wandb
 src/models/yolor/runs
 src/models/yolor/*.pt
