--- a/.gitignore
+++ b/.gitignore
@@ -138,9 +138,9 @@ dmypy.json
 cython_debug/
 
 # Custom
-src/models/coco
-src/models/data
-src/models/yolor/wandb
-src/models/yolor/inference
-src/models/yolor/runs
-src/models/yolor/*.pt
+models/coco
+models/data
+models/yolor/wandb
+models/yolor/inference
+models/yolor/runs
+models/yolor/*.pt
