--- a/models/environment.yml
+++ b/models/environment.yml
@@ -3,97 +3,101 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - appdirs=1.4.4=pyh9f0ad1d_0
-  - bzip2=1.0.8=he774522_0
-  - ca-certificates=2021.10.8=h5b45459_0
-  - certifi=2021.10.8=py39hcbf5309_0
-  - cffi=1.14.6=py39h0878f49_1
-  - cfgv=3.3.1=pyhd8ed1ab_0
-  - distlib=0.3.3=pyhd8ed1ab_0
-  - editdistance-s=1.0.0=py39h2e07f2f_1
-  - filelock=3.3.1=pyhd8ed1ab_0
-  - identify=2.3.0=pyhd8ed1ab_0
-  - libffi=3.4.2=hd77b12b_0
-  - nodeenv=1.6.0=pyhd8ed1ab_0
-  - openssl=1.1.1l=h8ffe710_0
-  - pip=21.2.4=py39haa95532_0
-  - pre-commit=2.15.0=py39hcbf5309_0
-  - pycparser=2.20=pyh9f0ad1d_2
-  - python=3.9.0=h6244533_2
-  - python_abi=3.9=2_cp39
-  - pyyaml=6.0=py39hb82d6ee_0
-  - setuptools=58.0.4=py39haa95532_0
-  - six=1.16.0=pyh6c4a22f_0
-  - sqlite=3.36.0=h2bbff1b_0
-  - tk=8.6.11=h2bbff1b_0
-  - toml=0.10.2=pyhd8ed1ab_0
-  - tzdata=2021a=h5d7bf9c_0
-  - vc=14.2=h21ff451_1
-  - vs2015_runtime=14.27.29016=h5e58377_2
-  - wheel=0.37.0=pyhd3eb1b0_1
-  - wincertstore=0.2=py39haa95532_2
-  - xz=5.2.5=h62dcd97_0
-  - yaml=0.2.5=he774522_0
-  - zlib=1.2.11=h62dcd97_4
+  - appdirs=1.4.4
+  - bzip2=1.0.8
+  - ca-certificates=2021.10.8
+  - certifi=2021.10.8
+  - cffi=1.14.6
+  - cfgv=3.3.1
+  - distlib=0.3.3
+  - editdistance-s=1.0.0
+  - filelock=3.3.1
+  - identify=2.3.0
+  - libffi=3.4.2
+  - nodeenv=1.6.0
+  - openssl=1.1.1l
+  - pip=21.2.4
+  - pre-commit=2.15.0
+  - pycparser=2.20
+  - python=3.9.0
+  - python_abi=3.9
+  - pyyaml=6.0
+  - setuptools=58.0.4
+  - six=1.16.0
+  - sqlite=3.36.0
+  - tk=8.6.11
+  - toml=0.10.2
+  - tzdata=2021a
+  - vc=14.2
+  - vs2015_runtime=14.27.29016
+  - wheel=0.37.0
+  - wincertstore=0.2
+  - xz=5.2.5
+  - yaml=0.2.5
+  - zlib=1.2.11
   - pip:
-    - absl-py==0.15.0
-    - backports-entry-points-selectable==1.1.0
-    - cachetools==4.2.4
-    - charset-normalizer==2.0.7
-    - click==8.0.3
-    - colorama==0.4.4
-    - configparser==5.0.2
-    - cycler==0.10.0
-    - cython==0.29.24
-    - docker-pycreds==0.4.0
-    - gitdb==4.0.7
-    - gitpython==3.1.24
-    - google-auth==2.3.0
-    - google-auth-oauthlib==0.4.6
-    - grpcio==1.41.0
-    - idna==3.3
-    - kiwisolver==1.3.2
-    - markdown==3.3.4
-    - matplotlib==3.4.3
-    - numpy==1.21.2
-    - oauthlib==3.1.1
-    - opencv-python==4.5.3.56
-    - pandas==1.3.4
-    - pathtools==0.1.2
-    - pillow==8.4.0
-    - platformdirs==2.4.0
-    - promise==2.3
-    - protobuf==3.18.1
-    - psutil==5.8.0
-    - pyasn1==0.4.8
-    - pyasn1-modules==0.2.8
-    - pycocotools==2.0
-    - pyparsing==2.4.7
-    - python-dateutil==2.8.2
-    - pytz==2021.3
-    - requests==2.26.0
-    - requests-oauthlib==1.3.0
-    - rsa==4.7.2
-    - scipy==1.7.1
-    - seaborn==0.11.2
-    - sentry-sdk==1.4.3
-    - shortuuid==1.0.1
-    - smmap==4.0.0
-    - subprocess32==3.5.4
-    - tensorboard==2.7.0
-    - tensorboard-data-server==0.6.1
-    - tensorboard-plugin-wit==1.8.0
-    - termcolor==1.1.0
-    - thop==0.0.31-2005241907
-    - torch==1.9.1+cu111
-    - torch-tb-profiler==0.3.0
-    - torchaudio==0.9.1
-    - torchvision==0.10.1+cu111
-    - tqdm==4.62.3
-    - typing-extensions==3.10.0.2
-    - urllib3==1.26.7
-    - virtualenv==20.8.1
-    - wandb==0.12.5
-    - werkzeug==2.0.2
-    - yaspin==2.1.0
-prefix: C:\ProgramData\Anaconda3\envs\erodetect
+      - absl-py==0.15.0
+      - backports-entry-points-selectable==1.1.0
+      - black==21.9b0
+      - cachetools==4.2.4
+      - charset-normalizer==2.0.7
+      - click==8.0.3
+      - colorama==0.4.4
+      - configparser==5.0.2
+      - cycler==0.10.0
+      - cython==0.29.24
+      - docker-pycreds==0.4.0
+      - gitdb==4.0.7
+      - gitpython==3.1.24
+      - google-auth==2.3.0
+      - google-auth-oauthlib==0.4.6
+      - grpcio==1.41.0
+      - idna==3.3
+      - kiwisolver==1.3.2
+      - markdown==3.3.4
+      - matplotlib==3.4.3
+      - mypy-extensions==0.4.3
+      - numpy==1.21.2
+      - oauthlib==3.1.1
+      - opencv-python==4.5.3.56
+      - pandas==1.3.4
+      - pathspec==0.9.0
+      - pathtools==0.1.2
+      - pillow==8.4.0
+      - platformdirs==2.4.0
+      - promise==2.3
+      - protobuf==3.18.1
+      - psutil==5.8.0
+      - pyasn1==0.4.8
+      - pyasn1-modules==0.2.8
+      - pycocotools==2.0
+      - pyparsing==2.4.7
+      - python-dateutil==2.8.2
+      - pytz==2021.3
+      - regex==2021.10.21
+      - requests==2.26.0
+      - requests-oauthlib==1.3.0
+      - rsa==4.7.2
+      - scipy==1.7.1
+      - seaborn==0.11.2
+      - sentry-sdk==1.4.3
+      - shortuuid==1.0.1
+      - smmap==4.0.0
+      - subprocess32==3.5.4
+      - tensorboard==2.7.0
+      - tensorboard-data-server==0.6.1
+      - tensorboard-plugin-wit==1.8.0
+      - termcolor==1.1.0
+      - thop==0.0.31-2005241907
+      - tomli==1.2.1
+      - torch==1.9.1+cu111
+      - torch-tb-profiler==0.3.0
+      - torchaudio==0.9.1
+      - torchvision==0.10.1+cu111
+      - tqdm==4.62.3
+      - typing-extensions==3.10.0.2
+      - urllib3==1.26.7
+      - virtualenv==20.8.1
+      - wandb==0.12.5
+      - werkzeug==2.0.2
+      - yaspin==2.1.0
