--- a/models/environment.yml
+++ b/models/environment.yml
@@ -36,68 +36,69 @@ dependencies:
   - yaml=0.2.5
   - zlib=1.2.11
   - pip:
-      - absl-py==0.15.0
-      - backports-entry-points-selectable==1.1.0
-      - black==21.9b0
-      - cachetools==4.2.4
-      - charset-normalizer==2.0.7
-      - click==8.0.3
-      - colorama==0.4.4
-      - configparser==5.0.2
-      - cycler==0.10.0
-      - cython==0.29.24
-      - docker-pycreds==0.4.0
-      - gitdb==4.0.7
-      - gitpython==3.1.24
-      - google-auth==2.3.0
-      - google-auth-oauthlib==0.4.6
-      - grpcio==1.41.0
-      - idna==3.3
-      - kiwisolver==1.3.2
-      - markdown==3.3.4
-      - matplotlib==3.4.3
-      - mypy-extensions==0.4.3
-      - numpy==1.21.2
-      - oauthlib==3.1.1
-      - opencv-python==4.5.3.56
-      - pandas==1.3.4
-      - pathspec==0.9.0
-      - pathtools==0.1.2
-      - pillow==8.4.0
-      - platformdirs==2.4.0
-      - promise==2.3
-      - protobuf==3.18.1
-      - psutil==5.8.0
-      - pyasn1==0.4.8
-      - pyasn1-modules==0.2.8
-      - pycocotools==2.0
-      - pyparsing==2.4.7
-      - python-dateutil==2.8.2
-      - pytz==2021.3
-      - regex==2021.10.21
-      - requests==2.26.0
-      - requests-oauthlib==1.3.0
-      - rsa==4.7.2
-      - scipy==1.7.1
-      - seaborn==0.11.2
-      - sentry-sdk==1.4.3
-      - shortuuid==1.0.1
-      - smmap==4.0.0
-      - subprocess32==3.5.4
-      - tensorboard==2.7.0
-      - tensorboard-data-server==0.6.1
-      - tensorboard-plugin-wit==1.8.0
-      - termcolor==1.1.0
-      - thop==0.0.31-2005241907
-      - tomli==1.2.1
-      - torch==1.9.1+cu111
-      - torch-tb-profiler==0.3.0
-      - torchaudio==0.9.1
-      - torchvision==0.10.1+cu111
-      - tqdm==4.62.3
-      - typing-extensions==3.10.0.2
-      - urllib3==1.26.7
-      - virtualenv==20.8.1
-      - wandb==0.12.5
-      - werkzeug==2.0.2
-      - yaspin==2.1.0
+    - absl-py==0.15.0
+    - backports-entry-points-selectable==1.1.0
+    - black==21.9b0
+    - cachetools==4.2.4
+    - charset-normalizer==2.0.7
+    - click==8.0.3
+    - colorama==0.4.4
+    - configparser==5.0.2
+    - cycler==0.10.0
+    - cython==0.29.24
+    - docker-pycreds==0.4.0
+    - gitdb==4.0.7
+    - gitpython==3.1.24
+    - google-auth==2.3.0
+    - google-auth-oauthlib==0.4.6
+    - grpcio==1.41.0
+    - idna==3.3
+    - kiwisolver==1.3.2
+    - markdown==3.3.4
+    - matplotlib==3.4.3
+    - mypy-extensions==0.4.3
+    - numpy==1.21.2
+    - oauthlib==3.1.1
+    - opencv-python==4.5.3.56
+    - pandas==1.3.4
+    - pathspec==0.9.0
+    - pathtools==0.1.2
+    - pillow==8.4.0
+    - platformdirs==2.4.0
+    - promise==2.3
+    - protobuf==3.18.1
+    - psutil==5.8.0
+    - pyasn1==0.4.8
+    - pyasn1-modules==0.2.8
+    - pycocotools==2.0
+    - pyparsing==2.4.7
+    - python-dateutil==2.8.2
+    - pytz==2021.3
+    - regex==2021.10.21
+    - requests==2.26.0
+    - requests-oauthlib==1.3.0
+    - rsa==4.7.2
+    - scipy==1.7.1
+    - seaborn==0.11.2
+    - sentry-sdk==1.4.3
+    - shortuuid==1.0.1
+    - smmap==4.0.0
+    - subprocess32==3.5.4
+    - tensorboard==2.7.0
+    - tensorboard-data-server==0.6.1
+    - tensorboard-plugin-wit==1.8.0
+    - termcolor==1.1.0
+    - thop==0.0.31-2005241907
+    - tomli==1.2.1
+    - torch==1.9.1+cu111
+    - torch-tb-profiler==0.3.0
+    - torchaudio==0.9.1
+    - torchvision==0.10.1+cu111
+    - tqdm==4.62.3
+    - typing-extensions==3.10.0.2
+    - urllib3==1.26.7
+    - virtualenv==20.8.1
+    - wandb==0.12.5
+    - werkzeug==2.0.2
+    - yaspin==2.1.0
+prefix: C:\ProgramData\Anaconda3\envs\erodetect
